--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -1,5 +1,5 @@
 <script
-src="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.7.13/featherlight.min.js"
+src="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js"
 ></script>
 
 <script type="text/discourse-plugin" version="0.8.18">
